[package]
name = "xmlJSON"
version = "0.1.3"
authors = ["Scott Cooper <scott@sacooper.io>"]

description = "Conversions from XML to JSON"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sacooper/xmlJSON-rs"
documentation = "http://sacooper.io/xmlJSON-rs/xmlJSON/index.html"
homepage = "http://sacooper.io/xmlJSON-rs/xmlJSON/index.html"
keywords = ["XML", "JSON", "xml", "json", "conversion"]

[dependencies]
xml-rs = "*"
rustc-serialize = "*"
